--- a/_columns/The_Big_Picture/zh-cn/2024-12-03.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-12-03.md
@@ -94,7 +94,7 @@ In the enterprise software group, **Manhattan Associates** ([MANH](https://resea
 
 
 Buying leaders on pullbacks is perfectly sound strategy. The issue here is that with so many extended stocks, most are still holding well above their 50-day and 10-week lines. Buying a group leader after a pullback to the [21-day exponential moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/) has generally worked well. But it's a riskier entry.  
-在回调时买入领先者是完全合理的策略。这里的问题是，由于有这么多延长的股票，大多数股票仍然远高于其 50 天和 10 周的线。在回调至 [21 天指数移动平均线](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/)后买入组长通常效果良好。但这是一个风险更大的入口。
+在回调时买入领先者是完全合理的策略。这里的问题是，由于有这么多延长的股票，大多数股票仍然远高于其 50 天和 10 周线。在回调至 [21 天指数移动平均线](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/)后买入组长通常效果很好。但这是一个风险更大的入口。
 
 
 
