--- a/_columns/The_Big_Picture/zh-cn/2024-12-05.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-12-05.md
@@ -54,10 +54,12 @@ In the Dow Jones index, **3M** ([MMM](https://research.investors.com/quote.aspx?
 在道琼斯指数中，**3M** （[MMM](https://research.investors.com/quote.aspx?symbol=MMM)） 和**默克** （[MRK](https://research.investors.com/quote.aspx?symbol=MRK)） 周四表现最佳，各上涨 2.2%。这些股票总共使道琼斯指数的表现上涨了 31 点。
 
 
-On the downside, **UnitedHealth** ([UNH](https://research.investors.com/quote.aspx?symbol=UNH)) and **Salesforce** ([CRM](https://research.investors.com/quote.aspx?symbol=CRM)) sold off 5.2% and 1.8%, respectively. Their combined point loss was 235 points. **McDonald's** ([MCD](https://research.investors.com/quote.aspx?symbol=MCD)) also cost the Dow nearly 27 points.  
+On the downside, **UnitedHealth** ([UNH](https://research.investors.com/quote.aspx?symbol=UNH)) and **Salesforce** ([CRM](https://research.investors.com/quote.aspx?symbol=CRM)) sold off 5.2% and 1.8%, respectively. Their combined point loss was 235 points. **McDonald's** ([MCD](https://research.investors.com/quote.aspx?symbol=MCD)) also cost the Dow nearly 27 points.  
+不利的一面是，**UnitedHealth** （[UNH](https://research.investors.com/quote.aspx?symbol=UNH)） 和 **Salesforce** （[CRM）](https://research.investors.com/quote.aspx?symbol=CRM) 分别下跌 5.2% 和 1.8%。他们的总损失是 235 分。**麦当劳** （[MCD](https://research.investors.com/quote.aspx?symbol=MCD)） 也使道琼斯指数下跌近 27 点。
 
 
-The [Magnificent Seven stocks](https://www.investors.com/research/magnificent-seven-stocks-to-buy-and-and-watch/) ended mixed Thursday as the Roundhill Magnificent Seven ETF ([MAGS](https://research.investors.com/quote.aspx?symbol=MAGS)) climbed 0.6%. Notably, **Amazon.com** ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)) and **Tesla** ([TSLA](https://research.investors.com/quote.aspx?symbol=TSLA)) notched new highs.  
+The [Magnificent Seven stocks](https://www.investors.com/research/magnificent-seven-stocks-to-buy-and-and-watch/) ended mixed Thursday as the Roundhill Magnificent Seven ETF ([MAGS](https://research.investors.com/quote.aspx?symbol=MAGS)) climbed 0.6%. Notably, **Amazon.com** ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)) and **Tesla** ([TSLA](https://research.investors.com/quote.aspx?symbol=TSLA)) notched new highs.  
+[Magnificent Seven 股票](https://www.investors.com/research/magnificent-seven-stocks-to-buy-and-and-watch/)周四收盘涨跌互现，Roundhill Magnificent Seven ETF （[MAGS](https://research.investors.com/quote.aspx?symbol=MAGS)） 上涨 0.6%。值得注意的是，**Amazon.com** （[AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)） 和**特斯拉** （[TSLA）](https://research.investors.com/quote.aspx?symbol=TSLA) 创下新高。
 
 
 But the Innovator IBD 50 ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) exchange traded fund declined 0.4%. [Inside the IBD 50](https://research.investors.com/stock-lists/ibd-50/), there were a number of big winners on the session, including **Palantir Technologies** ([PLTR](https://research.investors.com/quote.aspx?symbol=PLTR)), which hit more new highs Thursday.  
@@ -97,7 +99,8 @@ As the stock market treks higher, the environment continues to require diligent 
 随着股市走高，环境继续需要勤奋的[风险管理](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)，这是 [IBD 方法的四大支柱](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/)之一。确保您监控您的行为不合时宜的头寸，并出售任何触发卖出规则的股票。
 
 
-[IBD MarketSurge's](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) Breaking Out Today list featured one new stock: **Icici Bank** ([IBN](https://research.investors.com/quote.aspx?symbol=IBN)), which broke out past a 31.60 cup-with-handle buy point. The Near Pivot list has seven stock ideas on it, and one is **Trip.com** ([TCOM](https://research.investors.com/quote.aspx?symbol=TCOM)), which is approaching a 69.67 buy point.  
+[IBD MarketSurge's](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) Breaking Out Today list featured one new stock: **Icici Bank** ([IBN](https://research.investors.com/quote.aspx?symbol=IBN)), which broke out past a 31.60 cup-with-handle buy point. The Near Pivot list has seven stock ideas on it, and one is **Trip.com** ([TCOM](https://research.investors.com/quote.aspx?symbol=TCOM)), which is approaching a 69.67 buy point.  
+[IBD MarketSurge 的](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)今日突破名单以一只新股为特色：**Icici Bank** （[IBN](https://research.investors.com/quote.aspx?symbol=IBN)），该股突破了 31.60 杯带手柄买入点。Near Pivot 列表上有七个股票想法，其中一个是 **Trip.com** （[TCOM](https://research.investors.com/quote.aspx?symbol=TCOM)），它接近 69.67 的买入点。
 
 
 
