--- a/_columns/The_Big_Picture/zh-cn/2024-12-06.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-12-06.md
@@ -48,36 +48,45 @@ Jobs Report Strong, Inflation Data Due就业报告强劲，通胀数据即将公
 指数从容应对强于预期的就业报告。美国经济在 11 月增加了 227,000 个非农就业岗位，远高于经济学家预期的 211,000 个。尽管如此，失业率从 10 月份的 4.1% 上升到 11 月份的 4.2%。这被视为一份金发姑娘报告，预计不会改变美联储在 12 月 18 日会议上降息的看法。
 
 
-A full slate of economic data is due in the coming week, with wholesale inventories data coming Monday, a third-quarter U.S. productivity reading due Tuesday and an import price index report coming Friday.  
+A full slate of economic data is due in the coming week, with wholesale inventories data coming Monday, a third-quarter U.S. productivity reading due Tuesday and an import price index report coming Friday.  
+下周将公布完整的经济数据，周一将公布批发库存数据，周二将公布美国第三季度生产率数据，周五将公布进口价格指数报告。
 
 
-But inflation will be the biggest focus for the week. Most importantly, the Consumer Price Index reading is scheduled for Wednesday. Headline CPI is seen rising 2.7% year-over-year while core prices are expected to post an annualized rise of 3.2%. Producer Price Index data is due Thursday.  
+But inflation will be the biggest focus for the week. Most importantly, the Consumer Price Index reading is scheduled for Wednesday. Headline CPI is seen rising 2.7% year-over-year while core prices are expected to post an annualized rise of 3.2%. Producer Price Index data is due Thursday.  
+但通货膨胀将是本周最大的焦点。最重要的是，消费者价格指数读数定于周三公布。整体 CPI 预计同比增长 2.7%，而核心价格预计将年化上涨 3.2%。生产者价格指数数据将于周四公布。
 
 
-A number of [noteworthy earnings reports are also due](https://www.investors.com/research/earnings-preview/oracle-stock-probes-all-time-highs-software-giant-in-new-growth-phase/). These include software firms **Oracle** ([ORCL](https://research.investors.com/quote.aspx?symbol=ORCL)) and **MongoDB** ([MDB](https://research.investors.com/quote.aspx?symbol=MDB)), along with retailers **Macy's** ([M](https://research.investors.com/quote.aspx?symbol=M)) and [Leaderboard stock](https://get.investors.com/leaderboard/) **Costco Wholesale** ([COST](https://research.investors.com/quote.aspx?symbol=COST)).  
+A number of [noteworthy earnings reports are also due](https://www.investors.com/research/earnings-preview/oracle-stock-probes-all-time-highs-software-giant-in-new-growth-phase/). These include software firms **Oracle** ([ORCL](https://research.investors.com/quote.aspx?symbol=ORCL)) and **MongoDB** ([MDB](https://research.investors.com/quote.aspx?symbol=MDB)), along with retailers **Macy's** ([M](https://research.investors.com/quote.aspx?symbol=M)) and [Leaderboard stock](https://get.investors.com/leaderboard/) **Costco Wholesale** ([COST](https://research.investors.com/quote.aspx?symbol=COST)).  
+一些[值得注意的收益报告也即将发布](https://www.investors.com/research/earnings-preview/oracle-stock-probes-all-time-highs-software-giant-in-new-growth-phase/)。其中包括软件公司**甲骨文** （[ORCL）](https://research.investors.com/quote.aspx?symbol=ORCL) 和 **MongoDB** （[MDB](https://research.investors.com/quote.aspx?symbol=MDB)），以及零售商**梅西百货** （[M](https://research.investors.com/quote.aspx?symbol=M)） 和[排行榜股票](https://get.investors.com/leaderboard/)**Costco Wholesale** （[COST）。](https://research.investors.com/quote.aspx?symbol=COST)
 
 
-Lululemon Earnings Help This Stock Market Group
------------------------------------------------
+Lululemon Earnings Help This Stock Market GroupLululemon 收益帮助这个股市集团
+-------------------------------------------------------------------
 
 
-A majority of the [S&P 500 sectors ended Friday lower](https://www.investors.com/category/etfs-and-funds/sectors/). Consumer discretionary and communication services were the strongest areas while energy and utilities lagged the most.  
+A majority of the [S&P 500 sectors ended Friday lower](https://www.investors.com/category/etfs-and-funds/sectors/). Consumer discretionary and communication services were the strongest areas while energy and utilities lagged the most.  
+[标准普尔 500 指数的大部分板块周五收低](https://www.investors.com/category/etfs-and-funds/sectors/)。非必需消费品和通信服务是最强劲的领域，而能源和公用事业则落后。
 
 
 
-As ever, the relative performance of Investor's Business Daily's 197 industry groups offered a richer account of the [action on the stock market today](https://www.investors.com/news/stock-market-today-stock-market-news/).  
+As ever, the relative performance of Investor's Business Daily's 197 industry groups offered a richer account of the [action on the stock market today](https://www.investors.com/news/stock-market-today-stock-market-news/).  
+与往常一样，《投资者商业日报》的 197 个行业团体的相对表现更丰富地描述了[当今股市的走势](https://www.investors.com/news/stock-market-today-stock-market-news/)。
 
 
-Specialty retailers — boosted by **Ulta Beauty's** ([ULTA](https://research.investors.com/quote.aspx?symbol=ULTA)) post-earnings bounce — were the among the top performers Friday along with medical software plays, and fiber-optics stocks.  
+Specialty retailers — boosted by **Ulta Beauty's** ([ULTA](https://research.investors.com/quote.aspx?symbol=ULTA)) post-earnings bounce — were the among the top performers Friday along with medical software plays, and fiber-optics stocks.  
+受 **Ulta Beauty** （[ULTA](https://research.investors.com/quote.aspx?symbol=ULTA)） 财报后反弹的提振，专业零售商与医疗软件公司和光纤股一起成为周五表现最好的公司之一。
 
 
-Apparel retailers were also strong, boosted by **Lululemon Athletica** ([LULU](https://research.investors.com/quote.aspx?symbol=LULU)), which soared nearly 16% after the firm beat on the top and bottom lines.  
+Apparel retailers were also strong, boosted by **Lululemon Athletica** ([LULU](https://research.investors.com/quote.aspx?symbol=LULU)), which soared nearly 16% after the firm beat on the top and bottom lines.  
+服装零售商也表现强劲，受到 **Lululemon Athletica** （[LULU）](https://research.investors.com/quote.aspx?symbol=LULU) 的提振，该公司在营收和利润均超出预期后飙升了近 16%。
 
 
-In contrast, a variety of energy stocks — including oil and gas explorers, drillers, field services plays, and coal miners — all lagged. Foreign banks and agricultural operations firms also struggled.  
+In contrast, a variety of energy stocks — including oil and gas explorers, drillers, field services plays, and coal miners — all lagged. Foreign banks and agricultural operations firms also struggled.  
+相比之下，各种能源股（包括石油和天然气勘探公司、钻探公司、现场服务公司和煤矿工人）都表现落后。外国银行和农业经营公司也陷入困境。
 
 
-[View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/12/DailyGMI_120624.pdf).  
+[View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/12/DailyGMI_120624.pdf).  
+[在此处查看 General Market Indicators 图表页面](https://www.investors.com/wp-content/uploads/2024/12/DailyGMI_120624.pdf)。
 
 
 *Please follow Michael Larkin on X at [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) for more analysis of growth stocks.  
