--- a/_columns/The_Big_Picture/zh-cn/2024-12-04.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-12-04.md
@@ -24,17 +24,20 @@ The Nasdaq led with a 1.3% jump, making it 11 gains in the past 12 sessions. The
 
 
 
-The Technology Select Sector SPDR ([XLK](https://research.investors.com/quote.aspx?symbol=XLK)) rose 1.8% to an all-time high, clearing an alternative [buy point](https://www.investors.com/how-to-invest/investors-corner/buy-point-rule-how-teslas-34-gain-could-have-turned-to-43-profit/) at 237.94. The exchange traded fund initially broke out of a [cup-with-handle base](https://www.investors.com/how-to-invest/investors-corner/the-basics-how-to-analyze-a-stocks-cup-with-handle/) Sept. 26 and is up 6% from a 227.37 buy point.  
+The Technology Select Sector SPDR ([XLK](https://research.investors.com/quote.aspx?symbol=XLK)) rose 1.8% to an all-time high, clearing an alternative [buy point](https://www.investors.com/how-to-invest/investors-corner/buy-point-rule-how-teslas-34-gain-could-have-turned-to-43-profit/) at 237.94. The exchange traded fund initially broke out of a [cup-with-handle base](https://www.investors.com/how-to-invest/investors-corner/the-basics-how-to-analyze-a-stocks-cup-with-handle/) Sept. 26 and is up 6% from a 227.37 buy point.  
+科技精选板块 SPDR （[XLK](https://research.investors.com/quote.aspx?symbol=XLK)） 上涨 1.8% 至历史新高，在 237.94 点清除了另一个[买入点](https://www.investors.com/how-to-invest/investors-corner/buy-point-rule-how-teslas-34-gain-could-have-turned-to-43-profit/)。该交易所交易基金最初于 9 月 26 日突破了带[柄的杯子底部](https://www.investors.com/how-to-invest/investors-corner/the-basics-how-to-analyze-a-stocks-cup-with-handle/)，从 227.37 的买入点上涨了 6%。
 
 
-A series of positive earnings reports made the tech sector a winner. Chipmaker **Marvell Technology** ([MRVL](https://research.investors.com/quote.aspx?symbol=MRVL)) beat expectations on [strong demand for its custom chips](https://www.investors.com/news/technology/marvell-stock-marvel-earnings-custom-ai-chips-q32024/) for artificial intelligence applications. **Pure Storage** ([PSTG](https://research.investors.com/quote.aspx?symbol=PSTG)) soared 22% to its highest close since July after a [solid earnings report](https://www.investors.com/news/technology/pure-storage-stock-earnings-q3-2024-ai/).  
+A series of positive earnings reports made the tech sector a winner. Chipmaker **Marvell Technology** ([MRVL](https://research.investors.com/quote.aspx?symbol=MRVL)) beat expectations on [strong demand for its custom chips](https://www.investors.com/news/technology/marvell-stock-marvel-earnings-custom-ai-chips-q32024/) for artificial intelligence applications. **Pure Storage** ([PSTG](https://research.investors.com/quote.aspx?symbol=PSTG)) soared 22% to its highest close since July after a [solid earnings report](https://www.investors.com/news/technology/pure-storage-stock-earnings-q3-2024-ai/).  
+一系列积极的收益报告使科技行业成为赢家。芯片制造商 **Marvell Technology** （[MRVL）](https://research.investors.com/quote.aspx?symbol=MRVL) 因其用于人工智能应用的[定制芯片的强劲需求](https://www.investors.com/news/technology/marvell-stock-marvel-earnings-custom-ai-chips-q32024/)而超出预期。**Pure Storage** （[PSTG）](https://research.investors.com/quote.aspx?symbol=PSTG) 在公布[稳健的收益报告](https://www.investors.com/news/technology/pure-storage-stock-earnings-q3-2024-ai/)后飙升 22% 至 7 月以来的最高收盘价。
 
 
-Software stocks in particular were brilliant. Seven of the 12 best-performing industry groups Wednesday were in that sector.  
+Software stocks in particular were brilliant. Seven of the 12 best-performing industry groups Wednesday were in that sector.  
+软件股尤其出色。周三表现最好的 12 个行业组中有 7 个属于该行业。
 
 
-Dow Races To New Milestone
---------------------------
+Dow Races To New Milestone道琼斯指数迈向新的里程碑
+--------------------------------------
 
 
 ![](https://www.investors.com/wp-content/uploads/2024/12/MP120424.jpg)The Dow Jones Industrial Average rose 0.7% and made one of its fastest runs to a 1,000-point milestone. The index took only 16 trading days to get from 44,000 to 45,000. That's the third-fastest 1,000-point jaunt on record, according to Dow Jones Market Data.  
@@ -57,31 +60,28 @@ Advancing stocks topped decliners by a 9-to-7 ratio on the Nasdaq. But winners a
 在纳斯达克指数中，上涨的股票以 9 比 7 的比率领先于下跌的股票。但在纽约证券交易所，赢家和输家几乎持平。
 
 
-Stock Market Overheating?
--------------------------
+Stock Market Overheating?股市过热？
+------------------------------
 
 
-With few distribution days on the ledger, and indexes making record highs, the stock market gives investors justification to continue with 80% to 100% exposure, as IBD is recommending.  
+With few distribution days on the ledger, and indexes making record highs, the stock market gives investors justification to continue with 80% to 100% exposure, as IBD is recommending.  
+正如 IBD 所建议的那样，由于账本上的分配天数很少，而且指数创下历史新高，股市为投资者提供了继续 80% 至 100% 敞口的理由。
 
 
-But could the major indexes be getting overheated? The signals are mixed.  
+But could the major indexes be getting overheated? The signals are mixed.  
+但主要指数会不会过热了？信号喜忧参半。
 
 
-The S&P 500 is 3.9% above the 50-day moving average, and the Nasdaq is nearly 6% above its 50-day line. That's the widest gap since the indexes made short-term highs in mid-November.  
+The S&P 500 is 3.9% above the 50-day moving average, and the Nasdaq is nearly 6% above its 50-day line. That's the widest gap since the indexes made short-term highs in mid-November.  
+标准普尔 500 指数比 50 天移动平均线高出 3.9%，纳斯达克指数比其 50 天移动平均线高出近 6%。这是自 11 月中旬指数创下短期高点以来的最大差距。
 
 
-That's getting stretched, but is not necessarily cause for alarm. While above their 50-day lines, SPDR S&P 500 Trust ([SPY](https://research.investors.com/quote.aspx?symbol=SPY)) and Invesco QQQ Trust ([QQQ](https://research.investors.com/quote.aspx?symbol=QQQ)) are still below the percentages that historically signal stock market highs.  
+That's getting stretched, but is not necessarily cause for alarm. While above their 50-day lines, SPDR S&P 500 Trust ([SPY](https://research.investors.com/quote.aspx?symbol=SPY)) and Invesco QQQ Trust ([QQQ](https://research.investors.com/quote.aspx?symbol=QQQ)) are still below the percentages that historically signal stock market highs.  
+这有点紧张，但不一定需要引起警惕。虽然高于 50 天线，但 SPDR S&P 500 Trust （[SPY](https://research.investors.com/quote.aspx?symbol=SPY)） 和 Invesco QQQ Trust （[QQQ](https://research.investors.com/quote.aspx?symbol=QQQ)） 仍低于历史上预示股市高点的百分比。
 
 
-The Nasdaq's short-term overbought-oversold indicator in [IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) has climbed to about 500. Spikes to that level signaled index pullbacks in early April, May, July and early September, but not in late September.  
-
-
-
-
----
-
-
-[**See Which Stocks Are In The Leaderboard Model Portfolio**](https://www.investors.com/product/leaderboard/?artProdLink=Leaderboard) 
+The Nasdaq's short-term overbought-oversold indicator in [IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) has climbed to about 500. Spikes to that level signaled index pullbacks in early April, May, July and early September, but not in late September.  
+纳斯达克在 [IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) 中的短期超买超卖指标已攀升至 500 左右。飙升至该水平预示着指数在 4 月初、5 月、7 月和 9 月初回调，但 9 月下旬则没有。
 
 
 
@@ -89,10 +89,21 @@ The Nasdaq's short-term overbought-oversold indicator in [IBD MarketSurge](https
 ---
 
 
-Investor optimism continues to run hot. The Investors Intelligence weekly survey of market newsletters showed bulls rose to 62.9% from 61.3% a week earlier. It's been eight straight weeks that bulls exceed 55%, which the firm considers a danger zone. It's also the most bulls since 64.2% in July.  
+[**See Which Stocks Are In The Leaderboard Model Portfolio  
+查看排行榜模型投资组合中有哪些股票**](https://www.investors.com/product/leaderboard/?artProdLink=Leaderboard)
 
 
-While the stock market may need a little cooling, [seasonal trends are in its favor](https://www.investors.com/market-trend/the-big-picture/stock-market-sp500-nasdaq-dow-jones-tech-stocks/). December tends to be kind to stock investors, especially in the second half of the month.  
+
+
+---
+
+
+Investor optimism continues to run hot. The Investors Intelligence weekly survey of market newsletters showed bulls rose to 62.9% from 61.3% a week earlier. It's been eight straight weeks that bulls exceed 55%, which the firm considers a danger zone. It's also the most bulls since 64.2% in July.  
+投资者的乐观情绪继续炙手可热。Investors Intelligence 对市场通讯的每周调查显示，多头从一周前的 61.3% 上升到 62.9%。多头已经连续八周超过 55%，该公司认为这是一个危险区域。这也是自 7 月份 64.2% 以来最多的多头。
+
+
+While the stock market may need a little cooling, [seasonal trends are in its favor](https://www.investors.com/market-trend/the-big-picture/stock-market-sp500-nasdaq-dow-jones-tech-stocks/). December tends to be kind to stock investors, especially in the second half of the month.  
+虽然股市可能需要一点降温，但[季节性趋势对其有利](https://www.investors.com/market-trend/the-big-picture/stock-market-sp500-nasdaq-dow-jones-tech-stocks/)。12 月往往对股票投资者有利，尤其是在下半月。
 
 
 Stock Market Watches Powell, Economic Data股市关注鲍威尔， 经济数据
@@ -142,8 +153,7 @@ IBD 方法的四大支柱](https://www.investors.com/how-to-invest/investors-cor
 股票市场的风险管理：投资多少钱](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
 
 
-[IBD Live: Learn And Analyze Growth Stocks With The Pros  
-IBD Live：与专业人士一起学习和分析成长型股票](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=icmhpbrdcstmsg|cms|ibdlive|2019|11|ibdlive|na|707596&src=A00387A)
+[IBD Live: Learn And Analyze Growth Stocks With The Pros](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=icmhpbrdcstmsg|cms|ibdlive|2019|11|ibdlive|na|707596&src=A00387A)
 
 
 
