--- a/_columns/The_Big_Picture/zh-cn/2024-12-09.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-12-09.md
@@ -70,7 +70,7 @@ That said, Monday's stock market moves also underlined the importance of buying 
 
 
 AppLovin became ripe for profit-taking after crossing 400 for the first time. At Friday's peak, the app development platform reached a breathtaking stock market valuation of $140 billion. For perspective, if AppLovin held a place in the Dow Jones Industrial Average, it would be the 24th largest member in terms of market capitalization.  
-AppLovin 在首次突破 400 点后获利回吐的时机成熟。在周五的高峰期，该应用程序开发平台的股票市场估值达到了惊人的 1400 亿美元。从长远来看，如果 AppLovin 在道琼斯工业平均指数中占有一席之地，它将成为市值第 24 位最大的成员。
+AppLovin 在首次突破 400 点后获利回吐的时机成熟。在周五的高峰期，该应用程序开发平台的股票市场估值达到了惊人的 1400 亿美元。从长远来看，如果 AppLovin 在道琼斯工业平均指数中占有一席之地，它将是市值第 24 位最大的成员。
 
 
 From 100 To 400 In Three Months三个月内从 100 增加到 400
@@ -179,7 +179,8 @@ The S&P 500 rallied 2.3% in August. But it was a wild month as investors worried
 这仍然是投资的黄金法则](https://www.investors.com/how-to-invest/investors-corner/still-the-no-1-rule-for-stock-investors-always-cut-your-losses-short/)
 
 
-[Get Full Access To IBD Stock Lists And Ratings](https://www.investors.com/product/ibd-digital/?artProdLink=IBD_Digital) 
+[Get Full Access To IBD Stock Lists And Ratings  
+获得对 IBD 股票列表和评级的完全访问权限](https://www.investors.com/product/ibd-digital/?artProdLink=IBD_Digital)
 
 
 
