--- a/_columns/Swing_Trading/zh-cn/2024-12-06.md
+++ b/_columns/Swing_Trading/zh-cn/2024-12-06.md
@@ -17,8 +17,8 @@ This earnings season has seen plenty of stocks launch 20% or more higher. With u
 
 
 
-Swing Trading Example: Dutch Bros Stock波段交易示例：Dutch Bros 股票
------------------------------------------------------------
+Swing Trading Example: Dutch Bros Stock
+---------------------------------------
 
 
 As the election unfolded and stocks got their postelection bumps, not everything was easy to buy. Dutch Bros was up nearly 4% the day after the election **(1)** but difficult to buy with earnings on tap. When earnings did come out, Dutch Bros was up 43% at its peak before settling at a 28% gain **(2)**. A purchase at the open would have fared OK but a purchase at the peak of the day saw over a 10% loss at the close. That can be hard to stomach having a stock gain that much and still be a loser.  
