--- a/_columns/The_Big_Picture/zh-cn/2024-12-09.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-12-09.md
@@ -70,7 +70,7 @@ That said, Monday's stock market moves also underlined the importance of buying 
 
 
 AppLovin became ripe for profit-taking after crossing 400 for the first time. At Friday's peak, the app development platform reached a breathtaking stock market valuation of $140 billion. For perspective, if AppLovin held a place in the Dow Jones Industrial Average, it would be the 24th largest member in terms of market capitalization.  
-AppLovin 在首次突破 400 点后获利回吐的时机成熟。在周五的高峰期，该应用程序开发平台的股票市场估值达到了惊人的 1400 亿美元。从长远来看，如果 AppLovin 在道琼斯工业平均指数中占有一席之地，它将是市值第 24 位最大的成员。
+AppLovin 在首次突破 400 点后获利回吐的时机成熟。在周五的高峰期，该应用程序开发平台的股票市场估值达到了惊人的 1400 亿美元。从长远来看，如果 AppLovin 在道琼斯工业平均指数中占有一席之地，它将成为市值第 24 位最大的成员。
 
 
 From 100 To 400 In Three Months三个月内从 100 增加到 400
